# cortex

./: .gitignore  CHANGELOG.md  COMPATIBLE_MODELS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  OLLAMA_FILES_SUMMARY.txt  OLLAMA_INTEGRATION_COMPLETE.md  README.md  README_DEPENDENCIES.md  TESTING.md  dependency_resolver.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  cla-signers.json
.github/scripts/: cla_check.py
.github/workflows/: autofix.yml  ci.yml  cx-release.yml  cx-test.yml  release.yml  spam-protection.yml
LLM/: test_interpreter.py
ci/: deploy.sh
cortex/: api_key_detector.py  ask.py  cli.py  context_memory.py  coordinator.py  daemon_client.py  daemon_commands.py  dependency_importer.py  first_run_wizard.py  graceful_degradation.py  installation_history.py  licensing.py  llm_router.py  parallel_llm.py  permission_manager.py  predictive_prevention.py  role_manager.py  semantic_cache.py  semver_resolver.py  stdin_handler.py  transaction_history.py  uninstall_impact.py
cortex/i18n/locales/: en.yaml
cortex/kernel_features/: kv_cache_manager.py  model_lifecycle.py
cortex/llm/: interpreter.py
cortex/providers/: __init__.py  ollama_provider.py
cx/: system_alert_manager.py
daemon/: CMakeLists.txt  README.md
daemon/config/: cortexd.default  cortexd.yaml.example  daemon.conf.example
daemon/include/: alert_manager.h  cortexd_common.h  daemon_config.h  ipc_protocol.h  llm_wrapper.h  logging.h  socket_server.h  system_monitor.h
daemon/include/cortexd/: common.h  config.h  logger.h
daemon/include/cortexd/alerts/: alert_manager.h
daemon/include/cortexd/core/: daemon.h  service.h
daemon/include/cortexd/ipc/: handlers.h  protocol.h  server.h
daemon/include/cortexd/llm/: engine.h  llama_backend.h
daemon/include/cortexd/monitor/: apt_monitor.h  cve_scanner.h  disk_monitor.h  memory_monitor.h  system_monitor.h
daemon/scripts/: build.sh  install.sh  setup-llm.sh  setup_daemon.py  uninstall.sh
daemon/src/: main.cpp
daemon/src/alerts/: alert_manager.cpp  alert_manager_impl.cpp  alert_store.cpp
daemon/src/config/: config.cpp  daemon_config.cpp
daemon/src/core/: daemon.cpp
daemon/src/ipc/: handlers.cpp  protocol.cpp  server.cpp
daemon/src/llm/: engine.cpp  inference_queue.cpp  llama_backend.cpp  llama_wrapper.cpp
daemon/src/monitor/: apt_monitor.cpp  cve_scanner.cpp  dependency_checker.cpp  disk_monitor.cpp  memory_monitor.cpp  system_monitor.cpp
daemon/src/server/: ipc_protocol.cpp  socket_server.cpp
daemon/src/utils/: logger.cpp  logging.cpp  util_functions.cpp
daemon/systemd/: cortexd.service  cortexd.socket
daemon/tests/integration/: test_daemon.cpp  test_handlers.cpp
daemon/tests/unit/: socket_server_test.cpp  test_config.cpp
docs/: COMMANDS.md  CORTEXD_DOCUMENTATION_INDEX.md  CORTEXD_FILE_INVENTORY.md  CORTEXD_IMPLEMENTATION_SUMMARY.md  CORTEXD_PROJECT_COMPLETION.md  DAEMON_API.md  DAEMON_ARCHITECTURE.md  DAEMON_BUILD.md  DAEMON_LLM_HEALTH_STATUS.md  DAEMON_SETUP.md  DAEMON_TROUBLESHOOTING.md  DEPLOYMENT_CHECKLIST.md  DOCKER_PERMISSIONS.md  GETTING_STARTED_CORTEXD.md  LLAMA_CPP_BUGS_AND_IMPROVEMENTS.md  LLAMA_CPP_IMPLEMENTATION_COMPLETE.md  LLAMA_CPP_INTEGRATION.md  LLAMA_CPP_SETUP_AND_TESTING.md  LLM_SETUP.md  OLLAMA_IMPLEMENTATION_SUMMARY.md  OLLAMA_INTEGRATION.md  OLLAMA_QUICKSTART.md  PREDICTIVE_ERROR_PREVENTION.md  PR_OLLAMA_INTEGRATION.md  README_CORTEXD_DOCS.md  changelog.md
docs/guides/: Developer-Guide.md  User-Guide.md
examples/: ollama_demo.py  sample-config.yaml
scripts/: setup_ollama.py
src/intent/: llm_agent.py
test/: run_all_tests.py  test_cli.py  test_coordinator.py  test_installation_history.py
tests/: cli_test_base.py  test_ask.py  test_cli.py  test_cli_extended.py  test_context_memory.py  test_dependency_importer.py  test_llm_router.py  test_ollama_integration.py  test_permission_manager.py  test_role_management.py  test_semver_resolver.py  test_shell_env_analyzer.py
tests/installer/: test_parallel_install.py
tests/integration/: test_end_to_end.py
tests/unit/: test_predictive_prevention.py
wezterm/: Cargo.toml
wezterm-gui/src/input/: complete.rs  editor.rs
wezterm-gui/src/subscription/: tier.rs
